@@ -11,6 +11,7 @@ import java.io.IOException;
 import java.io.RandomAccessFile;
 import java.nio.ByteOrder;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class DatasetBase {
     private static final Logger log = LoggerFactory.getLogger(DatasetBase.class);
@@ -68,6 +69,7 @@ public class DatasetBase {
     protected double scale = 1.0;
     protected int rdims;
     protected Double noiseLevel = null;
+    protected Double threshold = null;
     protected double[][] values;
     List<DatasetRegion> regions;
     // Listeners for changes in the list of regions
@@ -82,6 +84,7 @@ public class DatasetBase {
     private String posColor = "black";
     private String negColor = "red";
     private boolean littleEndian = false;
+    private File fidFile = null;
 
     public DatasetBase() {
 
@@ -531,6 +534,10 @@ public class DatasetBase {
         return fileName;
     }
 
+    public void setFileName(String newName) {
+        this.fileName = newName;
+    }
+
     /**
      * Get the type of the data values. At present, only single precision float
      * values are used in the dataset. This is indicated with a return value of
@@ -543,7 +550,7 @@ public class DatasetBase {
     }
 
     protected void removeFile(String datasetName) {
-        ProjectBase.getActive().removeDataset(datasetName);
+        ProjectBase.getActive().removeDataset(datasetName, this);
     }
 
     /**
@@ -1765,6 +1772,26 @@ public class DatasetBase {
         }
     }
 
+    /**
+     * Get the stored threshold level for this dataset
+     *
+     * @return noise level
+     */
+    public Double getThreshold() {
+        return threshold == null ? null : threshold / scale;
+    }
+
+    /**
+     * Store a threshold level for dataset
+     *
+     * @param level noise level
+     */
+    public void setThreshold(Double level) {
+        if (level != null) {
+            threshold = level * scale;
+        }
+    }
+
     public void setFreqDims(int n) {
         rdims = n;
     }
@@ -2047,6 +2074,14 @@ public class DatasetBase {
         }
     }
 
+    public void sourceFID(File sourceFID) {
+        this.fidFile = sourceFID;
+    }
+
+    public Optional<File> sourceFID() {
+        return Optional.ofNullable(fidFile);
+    }
+
     /**
      * Get the size of the dataset along the specified dimension.
      *
@@ -2128,7 +2163,8 @@ public class DatasetBase {
     }
 
     public DatasetRegion addRegion(double min, double max) {
-        List<DatasetRegion> sortedRegions = regions.stream().sorted().toList();
+        // don't use Stream.toList as that will give an imutableList
+        List<DatasetRegion> sortedRegions = regions.stream().sorted().collect(Collectors.toList());
         boolean firstRegion = sortedRegions.isEmpty();
 
         DatasetRegion newRegion = new DatasetRegion(min, max);
